# mlb-betting-prediction-pipeline

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: 01_data_ingest.ipynb  02_feature_engineering.ipynb  03_modelling.ipynb
src/mlb_betting/: config.py  data_loading.py  features.py  modeling.py
tests/: test_features.py
