[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-betting-prediction-pipeline"
version = "0.1.0"
description = "MLB betting prediction pipeline with API ingestion, Bayesian modeling and odds calibration"
readme = "README.md"
authors = [
  {name = "Gerard Kirwin", email = "gerardrobertkirwin@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "mlflow>=2.9.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "pandera>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",         
    "black",        
    "pre-commit",   
    "jupyter"
]
docs = [
    "mkdocs",
    "mkdocs-material"
]
